fix(home page): fix featured logos alignment

--- a/web/src/components/pages/new-home/featured-section/featured-section.css
+++ b/web/src/components/pages/new-home/featured-section/featured-section.css
@@ -24,6 +24,9 @@
 
             @media (--xl-up) {
                 gap: 8rem;
+            }
+
+            @media (--lg-up) {
                 justify-content: center;
             }
 
